# reality-finder

./: .gitignore  README.md  pyproject.toml
src/realitlscanner/: __main__.py  checker.py  cli.py  geo.py  models.py  scanner.py  utils.py
src/realitlscanner/data/: cdn_keywords.txt  hot_websites.txt
src/realitlscanner/detectors/: __init__.py  blocked.py  cdn.py  hot_website.py  location.py  redirect.py  tls.py
