[project]
name = "reality-finder"
version = "0.2.0"
description = "Find suitable Reality protocol dest domains by scanning IP ranges"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
authors = [{ name = "huangliang" }]
readme = "README.md"
keywords = ["reality", "tls", "scanner", "vless", "xray"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security",
]
dependencies = [
    "geoip2>=4.0",
    "cryptography>=42.0",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.urls]
Repository = "https://github.com/huanglune/reality-finder"

[project.scripts]
reality-finder = "realitlscanner.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/realitlscanner"]
